# ProjectX

./: .gitignore  .gitmodules  README.md
Jetson_Docker/: Dockerfile.ros.melodic  Dockerfile.zed.devel  build_container.sh
Jetson_Setup/: init.sh  install_acados.sh  install_pyspline.sh  (+3 more)
ROS_Package/maestro_control_ros/rc_control_msgs/: package.xml
ROS_Package/src/Control/traj_tracking_ros/: CMakeLists.txt  README.md  package.xml  setup.py
ROS_Package/src/Control/traj_tracking_ros/launch/: test_gmapping.launch  test_tracking_with_astar.launch  test_tracking_with_simple_cubic_spline.launch  traj_tracking_node.launch  traj_tracking_node_vicon.launch
ROS_Package/src/Control/traj_tracking_ros/params/: modelparams.yaml
ROS_Package/src/Control/traj_tracking_ros/script/: acados_ocp_dynamic.json  mpc.py  traj_tracking_acados.json  traj_tracking_base.py  traj_tracking_dyn.py  traj_tracking_kin.py  traj_tracking_node.py
ROS_Package/src/Control/traj_tracking_ros/scripts/: traj_tracking_node.py
ROS_Package/src/Control/traj_tracking_ros/src/MPC/: modelparams.yaml  mpc.py  test_interp.py  traj_tracking_acados.json  traj_tracking_base.py  traj_tracking_dyn.py  traj_tracking_kin.py
ROS_Package/src/Control/traj_tracking_ros/src/Tracking_MPC/: __init__.py  tracking_mpc.py  traj_tracking_acados.json  traj_tracking_base.py  traj_tracking_dyn.py
ROS_Package/src/Control/traj_tracking_ros/src/Tracking_Stanley/: TODO.md  car_state.py  realtime_buffer.py  stanley_controller.py  test.py  test_stanley_standalone.py  tracking_stanley.py  tracking_visualizer.py  utils.py
(+123 files in other folders)
