<package format="2">
  <name>rc_control_msgs</name>
  <version>0.0.1</version>
  <description>
  Messages for control RC car's ESC and steering servo
  </description>
  <maintainer email="zixuz@princeton.edu">Zixu Zhang</maintainer>
  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

</package>
